# Wordle

./: .gitignore  CMakeLists.txt  MIT license  README.md  main.cpp  words.txt
